# outexplain

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
outexplain/: __init__.py  __main__.py  outexplain.py  storage.py  utils.py
tests/: conftest.py  test_utils.py
