[project]
name = "outexplain-cli"
version = "0.1.0"
description = "Explain the output of your last terminal command, right in the CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Skyresth", email = "talesgalilea@outlook.com" },
]
keywords = ["cli", "terminal", "logs", "errors", "debugging", "openai", "anthropic", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rich>=13.7",
    "psutil>=5.9",
    "ollama>=0.3",
    "openai>=1.30",
    "anthropic>=0.34",
]

[project.scripts]
outexplain = "outexplain.outexplain:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/Skyresth/outexplain"
Source = "https://github.com/Skyresth/outexplain"
Issues = "https://github.com/Skyresth/outexplain/issues"
